c/examples/writing-a-c-compiler-tests/tests/chapter_10/invalid_types/use_file_scope_variable_as_fun.c
/* This declares a global variable */
extern int foo;

int main(void) {
    /* Treating a variable as a function is a type error. */
    return foo();
}